--- a/nginx.conf
+++ b/nginx.conf
@@ -14,13 +14,13 @@ server {
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDH>
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
     ssl_session_tickets off;
 
     # Security Headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" >
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
@@ -37,14 +37,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
- # API Location với CORS đã tối ưu
+
+    # API Location với CORS đã tối ưu
     location /api {
         # CORS Preflight
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, >
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorizat>
-            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=utf-8';
             add_header 'Content-Length' 0;
@@ -52,7 +53,7 @@ server {
         }
 
         # CORS Actual Request
-        add_header 'Access-Control-Allow-Origin' '' always;
+        add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Expose-Headers' 'Authorization' always;
 
@@ -65,20 +66,20 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Ẩn các headers CORS từ backend để tránh xung đột
+        # Ẩn các headers CORS từ backend
         proxy_hide_header 'Access-Control-Allow-Origin';
         proxy_hide_header 'Access-Control-Allow-Credentials';
         proxy_hide_header 'Access-Control-Allow-Methods';
         proxy_hide_header 'Access-Control-Allow-Headers';
     }
 
- # Block malicious requests
-    location ~* (eval-stdin|wp-admin|\.php$) {
+    # Block malicious requests
+    location ~* (eval\-stdin|wp\-admin|\.php$) {
         deny all;
         return 403;
     }
 
-    # Error Pages
+    # Error Pag
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
